ingress/platform-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2022-06-13T14:16:58Z"
  generation: 2
  name: platform
  namespace: arcade
  resourceVersion: "54784"
  uid: 672c7b44-b827-4c16-9537-b29e749c1520
spec:
  ingressClassName: nginx
  rules:
  - host: demo.localdev.me
    http:
      paths:
      - backend:
          service:
            name: platform
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: localhost
